# unistreak_cli

./: .gitignore  CMakeLists.txt  LICENSE_EN  LICENSE_RU  README.md  main.c  sha256sums.txt  unistreak_cli-1.0.0-linux-x86.tar  unistreak_cli-1.0.0-linux-x86_64.tar  unistreak_cli-1.0.0-win32-x86.exe.tar  unistreak_cli-1.0.0-windows-x64.exe.tar
cmake/: toolchain-linux-x86.cmake  toolchain-linux-x86_64.cmake  toolchain-win32-x86.cmake  toolchain-windows-x64.cmake
scripts/: build-all.sh
